# llm-drift-detector

./: README.md  pyproject.toml  setup.py
src/llm_drift_detector/: __init__.py
src/llm_drift_detector/api/: __init__.py  routes.py  schemas.py
src/llm_drift_detector/config/: __init__.py  default_config.py
src/llm_drift_detector/data/: __init__.py  collector.py  processor.py
src/llm_drift_detector/detectors/: __init__.py  base.py  distribution.py  embedding.py  performance.py  semantic.py
src/llm_drift_detector/monitoring/: __init__.py  alerting.py  metrics.py
src/llm_drift_detector/plugins/: __init__.py  base.py
src/llm_drift_detector/providers/: __init__.py  anthropic.py  azure.py  base.py  custom.py  huggingface.py  openai.py  vllm.py
src/llm_drift_detector/storage/: __init__.py  base.py  local.py  redis.py  sql.py
src/llm_drift_detector/utils/: __init__.py  helpers.py
src/llm_drift_detector/visualization/: __init__.py  dashboard.py
