[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-drift-detector"
version = "0.1.0"
description = "Monitoring and detection of drift in Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "llm",
    "drift",
    "monitoring",
    "machine learning",
    "artificial intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.3.0",
]
huggingface = [
    "transformers>=4.25.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
]
vllm = [
    "vllm>=0.1.0",
]
redis = [
    "redis>=4.5.0",
]
sql = [
    "sqlalchemy>=2.0.0",
]
visualization = [
    "dash>=2.8.0",
    "plotly>=5.13.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "transformers>=4.25.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
    "vllm>=0.1.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "dash>=2.8.0",
    "plotly>=5.13.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/llm-drift-detector"
"Bug Tracker" = "https://github.com/yourusername/llm-drift-detector/issues"
"Documentation" = "https://github.com/yourusername/llm-drift-detector"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "scipy.*",
    "plotly.*",
    "dash.*",
    "openai.*",
    "anthropic.*",
    "transformers.*",
    "torch.*",
    "sentence_transformers.*",
    "redis.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=llm_drift_detector"